# offer-guard-ai

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_CONTEXT.md  README.md  SECURITY.md  compose.yaml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/evals/: README.md  __init__.py  ragas_offer_review.py
backend/evals/datasets/: generate_sample_offer_pdfs.py
backend/evals/datasets/sample_offers_v1/: README.md  expected_outcomes.json  ground_truth.json
backend/evals/datasets/sample_response_v1/: offer-review-report.md
backend/evals/experiments/ragas_real_01/: metadata.json  ragas_dataset.jsonl  ragas_scores.json
backend/knowledge_base/: README.md  uae_employment_rules.v1.json
backend/migrations/: env.py
backend/migrations/versions/: 20260629_0001_create_documents_and_review_jobs.py  20260703_0002_create_document_chunks.py  20260703_0003_create_document_reports.py
backend/scripts/: README.md
backend/src/app/: __init__.py  main.py
backend/src/app/agents/: __init__.py
backend/tests/integration/: test_documents.py  test_health.py
backend/tests/unit/: test_chunking.py  test_config.py  test_document_chunks_service.py  test_document_models.py  test_document_review_workflow.py  test_documents_service.py  test_embeddings.py  test_extraction.py  test_guardrails.py  test_indexing_pipeline.py  test_postgres_service.py  test_ragas_offer_review_evals.py  test_report_generation_workflow.py  test_reporting.py  test_resources.py  test_rules.py  test_storage_service.py  test_tracing.py  test_uploads_service.py  test_weaviate_service.py
(+48 files in other folders)
