[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "offerguard-backend"
version = "0.1.0"
description = "OfferGuard API and review workflow"
requires-python = ">=3.11,<3.14"
dependencies = [
  "alembic>=1.16,<2.0",
  "asyncpg>=0.30,<1.0",
  "boto3>=1.37,<2.0",
  "fastapi>=0.115,<1.0",
  "pydantic-settings>=2.7,<3.0",
  "python-json-logger>=3.2,<4.0",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
  "weaviate-client>=4.17,<5.0",
]

[project.optional-dependencies]
ai = [
  "langchain-openai>=0.3,<1.0",
  "langgraph>=0.4,<1.0",
  "langsmith>=0.3,<1.0",
  "pypdf>=5.4,<6.0",
  "sentence-transformers>=4.0,<6.0",
]
eval = ["datasets>=3.5,<5.0", "ragas>=0.2,<1.0"]
dev = [
  "httpx>=0.28,<1.0",
  "mypy>=1.15,<2.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.26,<1.0",
  "pytest-cov>=6.1,<7.0",
  "ruff>=0.11,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["app"]
mypy_path = "src"
plugins = ["pydantic.mypy"]
